# openlift

./: .dockerignore  .gitignore  CHANGELOG.md  CONTRIBUTING.md  DEPLOY.md  Dockerfile  LICENSE  README.md  app.py  debug_gemini_models.py  docker-compose.yml  pyproject.toml  repro_gap.py  requirements.txt  results.json  template_config.yaml  template_data.csv
.github/workflows/: test.yml
.streamlit/: config.toml
docs/: assumptions.md  beta_onboarding.md  index.md  methodology.md  theory.md
examples/: make_data.py
examples/geo_lift_basic/: data.csv  experiment.yaml
examples/notebooks/: 01_geo_lift_demo.ipynb
openlift/: __init__.py
openlift/cli/: main.py
openlift/connectors/: __init__.py  base.py  google_ads.py  google_sheets.py  meta_ads.py
openlift/core/: covariates.py  creative.py  decision.py  design.py  diagnostics.py  economics.py  evidence.py  experiment.py  experiment_designer.py  features.py  inference.py  io.py  llm.py  memory.py  model_pymc.py  multi_cell.py  pipeline.py  report.py  report_generator.py  schema.py
tests/: test_budget_optimizer.py  test_creative.py  test_decision.py  test_design.py  test_diagnostics.py  test_evidence.py  test_experiment.py  test_experiment_designer.py  test_inference.py  test_io.py  test_model_smoke.py  test_schema.py  test_v1_features.py
