[tool.poetry]
name = "openlift"
version = "3.0.0"
description = "Marketing incrementality measurement using geo-lift with Bayesian counterfactuals in PyMC"
authors = ["OpenLift Team <team@openlift.ai>"]
readme = "README.md"
packages = [{include = "openlift"}]

[tool.poetry.dependencies]
python = "~3.11"
pymc = "^5.10.0"
arviz = "^0.19.0"
pandas = "^2.1.0"
numpy = "<2.0.0" 
typer = {extras = ["all"], version = "^0.15.0"}
pydantic = "^2.5.0"
ruamel-yaml = "^0.18.0"
PyYAML = "^6.0.1"
streamlit = "^1.31.0"
matplotlib = "^3.8.0"
scikit-learn = "^1.3.0"
fastdtw = "^0.3.4"
scipy = "^1.11.0"
google-generativeai = "^0.8.0"
openai = "^1.10.0"
gspread = "^6.0.0"
holidays = "^0.60"
requests = "^2.31.0"

# Optional connector dependencies
google-ads = {version = "^25.0.0", optional = true}
facebook_business = {version = "^20.0.0", optional = true}

[tool.poetry.extras]
google-ads = ["google-ads"]
meta-ads = ["facebook_business"]
all-connectors = ["google-ads", "facebook_business"]

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
ruff = "^0.1.0"
black = "^24.0.0"
mypy = "^1.8.0"
mkdocs = "^1.5.0"

[tool.poetry.scripts]
openlift = "openlift.cli.main:app"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.black]
line-length = 88
target-version = ['py311']
